Moved scene to top of html in order to prevent coordinate erros when sentence gets too long

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,3 +73,33 @@ h3 {
   position: absolute;
   top: 0px;
 }
+
+.testbtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.m-1 {
+  margin: 0.375rem;
+}
+
+.m-2 {
+  margin: 0.625rem;
+}
+
+.m-3 {
+  margin: 1rem;
+}
+
+.m-4 {
+  margin: 1.375rem;
+}
+
+.m-5 {
+  margin: 1.625rem;
+}
+
+.m-auto {
+  margin: auto;
+}
